bugfix and version boost (considering that a finished theme editor + blogging app deserve at least a full minor version jump)

--- a/NicerAppWebOS/domainConfigs/nicer.app/errors.css
+++ b/NicerAppWebOS/domainConfigs/nicer.app/errors.css
@@ -7,16 +7,25 @@
     box-shadow : inset 2px 2px 2px 2px rgba(255,255,255,0.7), 2px 2px 2px 2px rgba(0,0,0,0.5);
 }
 
+.phpErrorType_E_NOTICE {
+    background : rgba(0,100,0,0.4) !important;
+}
 .phpErrorType_E_USER_NOTICE {
-    background : rgba(0,150,0,0.4);
+    background : rgba(0,150,0,0.4) !important;
 }
 
+.phpErrorType_E_WARNING {
+    background : rgba(100,0,0,0.4) !important;
+}
 .phpErrorType_E_USER_WARNING {
-    background : rgba(100,0,0,0.4);
+    background : rgba(150,0,0,0.4) !important;
 }
 
+.phpErrorType_E_ERROR {
+    background : rgba(155,0,0,0.7) !important;
+}
 .phpErrorType_E_USER_ERROR {
-    background : rgba(255,0,0,0.7);
+    background : rgba(255,0,0,0.7) !important;
 }
 
 
