--- a/NicerAppWebOS/domainConfigs/nicer.app/index.dark.css
+++ b/NicerAppWebOS/domainConfigs/nicer.app/index.dark.css
@@ -16,6 +16,7 @@ h2 {
     color : cyan;
 }
 .logEntry {
+    word-break:break-word;
     margin : 8px;
     box-shadow : inset 0px 0px 3px 2px rgba(0,0,0,0.55), 3px 3px 2px 1px rgba(0,0,0,0.7);
 }
